--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,7 @@ body {
   font-family: Helvetica Neue for IBM, Helvetica Neue, Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background-color: white;
 }
 
 div {
@@ -168,11 +169,13 @@ div {
 
 .from-watson.latest .message-inner {
   color: #323232;
+  border-radius: 15px;  
 }
 
 .from-watson p {
   margin: 0.3125rem;
   padding: 0 1.25rem;
+  border: 2px;
 }
 
 .from-watson.latest.top p:before {
@@ -253,6 +256,7 @@ input:-moz-placeholder {
   background-color: #23292A;
   color: #fff;
   overflow-x: auto;
+  display: none;
 
   width: 45%;
   max-width: 32.0625rem;
