--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,7 +8,7 @@ body {
   font-family: Helvetica Neue for IBM, Helvetica Neue, Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: white;
+  background-color: grey;
 }
 
 div {
@@ -69,12 +69,14 @@ div {
 }
 
 .chat-column {
-  height: 100%;
+  height: 85%;
   padding: 0.9375rem 0 0.625rem 0;
-  margin: auto;
+  margin: 5rem auto;
   text-align: left;
   max-width: 25rem;
   min-width: 9.375rem;
+  background-color: white;
+  border-radius: 1.5em;
 }
 
 #scrollingChat {
@@ -192,23 +194,22 @@ div {
 }
 
 #textInput {
-  border: none;
+  border-radius: 2em;
   outline: none;
-  background: transparent;
+  background: #c9c9c9;
   font-size: 1rem;
   color: #323232;
   letter-spacing: 0.015rem;
   line-height: 1.3125rem;
   height: 2.5rem;
-  max-width: 100%;
-  padding-left: 0.125rem;
+  max-width: 90%;
+  padding-left: 1.525rem;
   margin-bottom: -0.125rem;
+  margin-left: 1rem;
   font-family: Helvetica Neue for IBM, Helvetica Neue, Helvetica, Arial, sans-serif;
-
-}
-
-#textInput.underline {
-  border-bottom: 2px solid #00B4A0;
+  border-top-style: inherit;
+  border-left-style: inherit;
+  border-right-style: inherit;
 }
 
 ::-webkit-input-placeholder {
@@ -231,13 +232,6 @@ input:-moz-placeholder {
 
 ::-ms-clear {
   display: none;
-}
-
-.inputOutline {
-  display: block;
-  border-bottom: 0.0625rem solid #aeaeae;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }
 
 #textInputDummy {
