Added new UI components
- Changed the look and bahaviour of the chatbox
- Removed the auto width adjusting js method from public/js/conversation.js

Signed-off-by: akhilpandey95 <akhilpandey95@icloud.com>

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -202,6 +202,7 @@ div {
   letter-spacing: 0.015rem;
   line-height: 1.3125rem;
   height: 2.5rem;
+  width: 15rem;
   max-width: 90%;
   padding-left: 1.525rem;
   margin-bottom: -0.125rem;
